@@ -1,4 +1,4 @@
-# blog-style.rb: customize to blog like labels. $Revision: 1.7 $
+# blog-style.rb: customize to blog like labels. $Revision: 1.8 $
 #
 # Copyright (c) 2003 TADA Tadashi <sho@spc.gr.jp>
 # Distributed under the GPL
@@ -11,11 +11,19 @@
 #
 alias title_tag_ title_tag
 def title_tag
-	return title_tag_ unless @mode == 'day'
-	diary = @diaries[@date.strftime('%Y%m%d')]
-	if diary
-		title = %Q|#{DiaryBase.method_defined?(:stripped_title) ? diary.stripped_title : diary.title}|
-		return "<title>#{@html_title} - #{title}</title>"
+	case @mode
+	when 'day'
+		diary = @diaries[@date.strftime('%Y%m%d')]
+		if diary
+			title = %Q|#{DiaryBase.method_defined?(:stripped_title) ? diary.stripped_title : diary.title}|
+			return "<title>#{@html_title} - #{title}</title>"
+		else
+			return title_tag_
+		end
+	when 'month'
+		list = archive_make_list.sort.push( nil ).unshift( nil )
+		index = list.index( @date.strftime("%Y%m") )
+		return "<title>#{@html_title} - #{'%05d' % (index)}</title>"
 	else
 		return title_tag_
 	end
